--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,12 +1,15 @@
 {
-    "extends": "@tsconfig/node18-strictest-esm/tsconfig.json",
     "include": ["src/**/*"],
     "compilerOptions": {
-        "module": "Node16",
-        "moduleResolution": "Node16",
-        "ignoreDeprecations": "5.0",
-        "outDir": "build",
-        "lib": ["es2022"],
-        "noImplicitAny": true
+        "target": "es2021",
+        "lib": ["es2021"],
+        "module": "node16",
+        "types": ["node"],
+        "esModuleInterop": true,
+        "outDir": "./build",
+        "skipLibCheck": true,
+        "strict": true,
+        "exactOptionalPropertyTypes": true,
+        "declaration": true
     }
 }
