--- a/package.json
+++ b/package.json
@@ -16,18 +16,18 @@
         "coverage": "vitest run --coverage"
     },
     "dependencies": {
-        "axios-debug-log": "^1.0.0",
         "dotenv": "^16.4.5",
-        "typechat": "^0.1.0"
+        "typechat": "^0.1.0",
+        "winston": "^3.13.0"
     },
     "devDependencies": {
-        "@tsconfig/node18-strictest-esm": "^1.0.1",
+        "@eslint/js": "^9.0.0",
         "@types/node": "^20.12.7",
-        "@typescript-eslint/eslint-plugin": "^7.6.0",
-        "@typescript-eslint/parser": "^7.6.0",
         "@vitest/coverage-c8": "^0.33.0",
+        "eslint": "^8.57.0",
         "prettier": "^3.2.5",
         "typescript": "^5.4.5",
+        "typescript-eslint": "^7.7.0",
         "undici": "^6.13.0",
         "vitest": "^1.5.0"
     }
